Prove a Commands v3 test starts, on a Tier 1 that loads the HAL
A plain JUnit test builds a mechanism in ADR 0006's shape against
Scheduler.createIndependentScheduler() and runs one command to completion,
asserting on elapsed Time rather than on cycles. A second test registers a
default command on the mechanism and asserts it runs on the test's scheduler
and not on the singleton — setDefaultCommand is one of the two Mechanism
methods that route through getRegisteredScheduler(), so deleting the override
fails it. ADR 0006's only open item is closed with that answer.

Four mutations were checked and all are caught: a command that never ends, one
that ends early, the --add-opens java.base/jdk.internal.vm flag removed, and
the getRegisteredScheduler() override deleted.

Tier 1 is not HAL-free. Scheduler.schedule() reaches BindingScope, which asks
OpModeFetcher for the opmode id, whose default reads RobotState.getOpModeId()
and initialises the sim HAL and NetworkTables. ADR 0013 and CONTEXT.md said
otherwise and were corrected; the escape, a split-package copy of upstream's
package-private CommandTestBase, is under ADR 0013's Rejected.

Constants.LOOP_PERIOD lands early and Robot's constructor passes it, because
the test's advance step is the robot's loop period and ADR 0002 rules 5 ms is
written in exactly one place.

Closes #56.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rzD9PgrkYKqQfKVjRqJjn